[package]
name = "rs-blobstore"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["limit", "trace"] }
tokio-util = { version = "0.7", features = ["io"] }
bytes = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
rand = "0.8"

[profile.release]
lto = "thin"
codegen-units = 1
